OPIK-3014 code improvements